changed to discord.js as a backend

--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
     "main": "storm.js",
     "author": "NobleWolf42",
     "dependencies": {
-        "discord.io": "https://github.com/woor/discord.io/tarball/gateway_v6",
-        "winston": "^3.2.1"
+        "discord.js": "^11.5.1"
     }
 }
