--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "main": "storm.js",
     "author": "NobleWolf42",
     "dependencies": {
-        "discord.js": "^11.5.1"
+        "discord.js": "^11.5.1",
+        "xmlhttprequest": "^1.8.0",
+        "ytdl-core": "^1.0.3"
     }
 }
