--- a/package.json
+++ b/package.json
@@ -5,6 +5,11 @@
     "main": "storm.js",
     "author": "NobleWolf42",
     "dependencies": {
-        "discord.js": "^11.5.1"
+        "@discordjs/uws": "^10.149.0",
+        "discord.js": "^11.5.1",
+        "ffmpeg": "0.0.4",
+        "node-opus": "^0.3.3",
+        "simple-youtube-api": "^5.2.1",
+        "ytdl-core": "^1.0.3"
     }
 }
