--- a/data/config.example.json
+++ b/data/config.example.json
@@ -9,5 +9,6 @@
         "redirectUri": "YOUR REDIRECT URI",
         "registerLink": "YOUR REDIRECT LINK"
 
-    }
+    },
+    "devids": ["USER-ID"]
 }
