--- a/package.json
+++ b/package.json
@@ -1,19 +1,32 @@
 {
     "name": "stormageddon-bot",
-    "version": "1.2.0",
-    "description": "Basic bot for Discord",
+    "version": "2.0.0",
+    "description": "Custom Discord Bot Made for My Server",
     "main": "storm.js",
-    "author": "NobleWolf42",
+    "author": "Ben Carpenter (NobleWolf42) <bencarpenterit@gmail.com>",
+    "private": true,
+    "homepage": "https://github.com/NobleWolf42/Stormageddon-Bot",
+    "repository": "github:NobleWolf42/Stormageddon-Bot",
+    "bugs": "https://github.com/NobleWolf42/Stormageddon-Bot/issues",
+    "engines": {
+        "node": ">=12.0.0"
+    },
     "dependencies": {
-        "@discordjs/uws": "^10.149.0",
-        "discord-oauth2": "^2.0.1",
-        "discord.js": "^11.5.1",
-        "ffmpeg": "0.0.4",
+        "discord-oauth2": "^2.3.0",
+        "discord.js": "^12.2.0",
+        "ffmpeg-static": "^4.2.3",
+        "lyrics-finder": "^21.0.5",
+        "soundcloud-downloader": "^0.1.2",
+        "string-progressbar": "^1.0.1",
         "form-data": "^3.0.0",
         "node-fetch": "^2.6.0",
-        "node-opus": "^0.3.3",
+        "@discordjs/opus": "^0.3.2",
         "simple-youtube-api": "^5.2.1",
         "xmlhttprequest": "^1.8.0",
-        "ytdl-core": "^2.1.7"
+        "ytdl-core": "^3.2.0",
+        "ytdl-core-discord": "^1.2.1"
+    },
+    "scripts": {
+        "start": "node storm.js"
     }
 }
