--- a/package.json
+++ b/package.json
@@ -12,19 +12,18 @@
         "node": ">=12.0.0"
     },
     "dependencies": {
+        "@discordjs/opus": "^0.3.3",
         "discord-oauth2": "^2.6.0",
         "discord.js": "^12.5.1",
+        "erit-ytdl": "^0.1.2",
         "ffmpeg-static": "^4.2.7",
+        "form-data": "^3.0.0",
         "lyrics-finder": "^21.4.0",
+        "node-fetch": "^2.6.1",
+        "simple-youtube-api": "^5.2.1",
         "soundcloud-downloader": "^0.2.1",
         "string-progressbar": "^1.0.1",
-        "form-data": "^3.0.0",
-        "node-fetch": "^2.6.1",
-        "@discordjs/opus": "^0.3.3",
-        "simple-youtube-api": "^5.2.1",
-        "xmlhttprequest": "^1.8.0",
-        "ytdl-core": "^4.1.2",
-        "ytdl-core-discord": "^1.2.4"
+        "xmlhttprequest": "^1.8.0"
     },
     "scripts": {
         "start": "node storm.js"
