--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
         "simple-youtube-api": "^5.2.1",
         "soundcloud-downloader": "^0.2.1",
         "string-progressbar": "^1.0.1",
-        "xmlhttprequest": "^1.8.0"
+        "xmlhttprequest": "^1.8.0",
+        "ytdl-core": "^4.4.5"
     },
     "scripts": {
         "start": "node storm.js"
