--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "stormageddon-bot",
-    "version": "2.1.0",
+    "version": "2.2.0",
     "description": "Custom Discord Bot Made for My Server",
     "main": "storm.js",
     "author": "Ben Carpenter (NobleWolf42) <bencarpenterit@gmail.com>",
@@ -12,19 +12,23 @@
         "node": ">=12.0.0"
     },
     "dependencies": {
-        "@discordjs/opus": "^0.3.3",
+        "@discordjs/opus": "^0.5.0",
         "discord-oauth2": "^2.6.0",
-        "discord.js": "^12.5.1",
-        "erit-ytdl": "^0.1.2",
-        "ffmpeg-static": "^4.2.7",
-        "form-data": "^3.0.0",
-        "lyrics-finder": "^21.4.0",
+        "discord.js": "^12.5.3",
+        "erit-ytdl": "^0.1.3",
+        "ffmpeg-static": "^4.3.0",
+        "form-data": "^4.0.0",
+        "i": "^0.3.6",
+        "lyrics-finder": "^21.7.0",
         "node-fetch": "^2.6.1",
+        "npm": "^7.15.0",
         "simple-youtube-api": "^5.2.1",
-        "soundcloud-downloader": "^0.2.1",
-        "string-progressbar": "^1.0.1",
+        "soundcloud-downloader": "^1.0.0",
+        "spotify-to-youtube": "^1.0.1",
+        "spotify-web-api-node": "^5.0.2",
+        "string-progressbar": "^1.0.4",
         "xmlhttprequest": "^1.8.0",
-        "ytdl-core": "^4.4.5"
+        "ytdl-core": "^4.8.2"
     },
     "scripts": {
         "start": "node storm.js"
