finished adding all the JSDov comments

--- a/data/botconfig.example.json
+++ b/data/botconfig.example.json
@@ -3,7 +3,7 @@
         "token": "YOUR BOT TOKEN",
         "clientSecret": "YOUR CLIENT SECRET",
         "youtubeApiKey": "YOUR YOUTUBE API KEY",
-        "soundcloudApiKey": "YOUR SOUND CLOUD API KEY",
+        "soundCloudApiKey": "YOUR SOUND CLOUD API KEY",
         "imgurApiKey" : "YOUR IMGUR API KEY",
         "d2ApiKey": "YOUR DESTINY 2 API KEY",
         "spotifyToken": "YOUR SPOTIFY TOKEN",
@@ -15,8 +15,8 @@
         "port": "PORT YOU WANT THE OAUTH SERVER TO USE"
     },
     "general": {
-        "clientId": "YOUR CLIENT ID",
-        "redirectUri": "YOUR REDIRECT URI",
+        "clientID": "YOUR CLIENT ID",
+        "redirectURI": "YOUR REDIRECT URI",
         "registerLink": "YOUR REGISTER URL"
 
     },
@@ -25,8 +25,8 @@
         "apiCall" : "IMGUR API CALL"
     },
     "music": {
-        "maxPlatlistSize": NUMBER OF MAX PLAYLIST LENGTH,
+        "maxPlaylistSize": NUMBER OF MAX PLAYLIST LENGTH,
         "pruning": TRUE OR FALSE TO ENABLE OR DISABLE PRUNING
     },
-    "devids": ["YOUR DISCORD IDS 1", "YOUR DISCORD IDS 2", "YOUR DISCORD IDS 3"]
+    "devIDs": ["YOUR DISCORD IDS 1", "YOUR DISCORD IDS 2", "YOUR DISCORD IDS 3"]
 }
