--- a/package.json
+++ b/package.json
@@ -6,23 +6,24 @@
     "author": "Ben Carpenter (NobleWolf42) <bencarpenterit@gmail.com>",
     "private": true,
     "homepage": "https://github.com/NobleWolf42/Stormageddon-Bot",
-    "repository": "github:NobleWolf42/Stormageddon-Bot",
+    "repository": "github:NobleWolf42/Stormageddon-Bot.git",
     "bugs": "https://github.com/NobleWolf42/Stormageddon-Bot/issues",
     "engines": {
         "node": ">=22.0.0"
     },
     "dependencies": {
+        "@discordjs/opus": "^0.9.0",
+        "@discordjs/voice": "^0.17.0",
+        "@distube/soundcloud": "^1.3.3",
+        "@distube/spotify": "^1.6.1",
+        "@distube/yt-dlp": "^1.1.3",
+        "@distube/ytsr": "^2.0.0",
         "discord-oauth2": "^2.12.1",
         "discord.js": "^14.15.2",
-        "erit-ytdl": "^0.1.3",
+        "distube": "^4.2.2",
         "lyrics-finder": "^21.7.0",
-        "simple-youtube-api": "^5.2.1",
-        "soundcloud-downloader": "^1.0.0",
-        "spotify-to-youtube": "^1.0.2",
-        "spotify-web-api-node": "^5.0.2",
-        "string-progressbar": "^1.0.4",
-        "xmlhttprequest": "^1.8.0",
-        "ytdl-core": "^4.11.5"
+        "sodium-native": "^4.1.1",
+        "xmlhttprequest": "^1.8.0"
     },
     "scripts": {
         "start": "node storm.js"
