--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,8 +2,9 @@
     "compilerOptions": {
         "outDir": "./built",
         "allowJs": true,
-        "target": "es5",
-        "skipLibCheck": true
+        "target": "es6",
+        "skipLibCheck": true,
+        "moduleResolution": "node"
     },
     "include": ["./src/**/*"]
 }
