--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,10 @@
         "allowJs": true,
         "target": "es6",
         "skipLibCheck": true,
-        "moduleResolution": "node"
+        "module": "NodeNext",
+        "moduleResolution": "NodeNext",
+        "resolveJsonModule": true,
+        "esModuleInterop": true
     },
     "include": ["./src/**/*"]
 }
