--- a/package.json
+++ b/package.json
@@ -21,14 +21,14 @@
         "@distube/yt-dlp": "^2.0.1",
         "@distube/ytsr": "^2.0.0",
         "@types/node": "^22.5.2",
+        "axios": "^1.7.7",
         "discord-oauth2": "^2.12.1",
         "discord.js": "^14.16.1",
         "distube": "^5.0.2",
         "genius-lyrics": "^4.4.7",
         "mongodb": "^6.8.0",
         "mongoose": "^8.5.4",
-        "sodium-native": "^4.1.1",
-        "xmlhttprequest": "^1.8.0"
+        "sodium-native": "^4.1.1"
     },
     "scripts": {
         "start": "nodemon --ignore ./built/data --watch built --env-file=.env ./built/storm.js",
