added test command to automate most testing

--- a/.env.example
+++ b/.env.example
@@ -1,37 +1,10 @@
-
-auth = {
-    "token": "YOUR BOT TOKEN",
-    "clientSecret": "YOUR CLIENT SECRET",
-    "youtubeApiKey": "YOUR YOUTUBE API KEY",
-    "soundCloudApiKey": "YOUR SOUND CLOUD API KEY",
-    "imgurApiKey" : "YOUR IMGUR API KEY",
-    "d2ApiKey": "YOUR DESTINY 2 API KEY",
-    "spotifyToken": "YOUR SPOTIFY TOKEN",
-    "spotifySecret": "YOUR SPOTIFY SECRET"
-}
-
-oauth = {
-    "privateKey": "LOCATION OF PRIVATE HTTPS KEY",
-    "publicKey": "LOCATION OF PUBLIC HTTPS KEY",
-    "port": "PORT YOU WANT THE OAUTH SERVER TO USE"
-}
-
-general = {
-    "clientID": "YOUR CLIENT ID",
-    "redirectURI": "YOUR REDIRECT URI",
-    "registerLink": "YOUR REGISTER URL"
-}
-
-imgur = {
-    "clientID" : "YOUR IMGUR CLIENT ID",
-    "apiCall" : "IMGUR API CALL"
-}
-
-music = {
-    "maxPlaylistSize": NUMBER OF MAX PLAYLIST LENGTH,
-    "pruning": TRUE OR FALSE TO ENABLE OR DISABLE PRUNING
-}
-
-devIDs = ["YOUR DISCORD IDS 1", "YOUR DISCORD IDS 2", "YOUR DISCORD IDS 3"]
-
+authToken = "YOUR BOT TOKEN"
+clientID = "YOUR BOT ID"
+clientSecret = "YOUR BOT SECRET"
+redirectURI = "http://localhost:3000/"
+d2ApiKey = "YOUR DESTINY 2 API KEY"
+devIDs = "YOURDEVIDSHERE,YOURDEVIDSHERE"
 mongoDBURI = "YOUR MONGODB URI"
+oauthPrivateKey = "YOUR LOCATION OF privkey.pem",
+oauthPublicKey = "YOU LOCATION OF fullchain.pem",
+oauthPort = 3000
