--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
         "module": "NodeNext",
         "moduleResolution": "NodeNext",
         "resolveJsonModule": true,
-        "esModuleInterop": true
+        "esModuleInterop": true,
+        "forceConsistentCasingInFileNames": true
     },
     "include": ["./src/**/*"]
 }
