--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
 .env
 /.vscode
 /node_modules
-.env
 log.json
 errorLog.json
 package-lock.json
 currentSettings.js
 botPrefix.json
+ecosystem.config.js
