should work now

--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
         "node": ">=20.17.0"
     },
     "dependencies": {
+        "@discordjs/opus": "^0.10.0",
         "@discordjs/voice": "^0.17.0",
         "@distube/deezer": "^2.0.1",
-        "@distube/soundcloud": "^2.0.2",
+        "@distube/soundcloud": "^2.0.4",
         "@distube/spotify": "^2.0.2",
-        "@distube/youtube": "^1.0.2",
+        "@distube/youtube": "^1.0.4",
         "@distube/yt-dlp": "^2.0.1",
+        "@distube/ytdl-core": "^4.16.10",
         "@distube/ytsr": "^2.0.0",
         "@types/node": "^22.5.2",
         "axios": "^1.7.7",
