--- a/package.json
+++ b/package.json
@@ -14,23 +14,24 @@
     },
     "dependencies": {
         "@discordjs/opus": "^0.10.0",
-        "@discordjs/voice": "^0.17.0",
+        "@discordjs/voice": "^0.19.0",
         "@distube/deezer": "^2.0.1",
         "@distube/soundcloud": "^2.0.4",
         "@distube/spotify": "^2.0.2",
         "@distube/youtube": "^1.0.4",
         "@distube/yt-dlp": "^2.0.1",
-        "@distube/ytdl-core": "^4.16.10",
-        "@distube/ytsr": "^2.0.0",
-        "@types/node": "^22.5.2",
-        "axios": "^1.7.7",
+        "@distube/ytdl-core": "^4.16.12",
+        "@distube/ytsr": "^2.0.4",
+        "@snazzah/davey": "^0.1.7",
+        "@types/node": "^24.10.1",
+        "axios": "^1.13.2",
         "discord-oauth2": "^2.12.1",
-        "discord.js": "^14.16.1",
-        "distube": "^5.0.2",
+        "discord.js": "^14.24.2",
+        "distube": "^5.0.7",
         "genius-lyrics": "^4.4.7",
-        "mongodb": "^6.8.0",
-        "mongoose": "^8.5.4",
-        "sodium-native": "^4.1.1",
+        "mongodb": "^7.0.0",
+        "mongoose": "^8.19.3",
+        "sodium-native": "^5.0.9",
         "xmlhttprequest-ts": "^1.0.1"
     },
     "scripts": {
@@ -39,12 +40,12 @@
         "dev": "tsc -w -P . & nodemon --env-file=.env ./built/storm.js"
     },
     "devDependencies": {
-        "@eslint/js": "^9.9.1",
-        "eslint": "^9.9.1",
-        "globals": "^15.9.0",
-        "nodemon": "^3.1.4",
-        "prettier": "3.3.3",
-        "typescript": "^5.5.4",
-        "typescript-eslint": "^8.4.0"
+        "@eslint/js": "^9.39.1",
+        "eslint": "^9.39.1",
+        "globals": "^16.5.0",
+        "nodemon": "^3.1.11",
+        "prettier": "3.6.2",
+        "typescript": "^5.9.3",
+        "typescript-eslint": "^8.46.4"
     }
 }
